# transcrever

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/dev/: manual-test.md
docs/superpowers/plans/: 2026-06-22-transcricao-desktop-rust.md
docs/superpowers/specs/: 2026-06-22-transcricao-desktop-rust-design.md
scripts/: ensure-model.ps1  repair_db.py  setup-model.ps1
src/: App.tsx  styles.css  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260622000100_initial_schema.sql  20260624000100_add_created_at.sql  20260625000100_app_settings.sql  20260626000100_transcription_engine.sql  20260627000100_projects.sql
src-tauri/scripts/: faster_whisper_transcribe.py
src-tauri/src/: commands.rs  db.rs  export.rs  lib.rs  main.rs  models.rs  queue.rs  scanner.rs  util.rs
src-tauri/src/backend/: faster_whisper.rs  mod.rs  whisper_cpp.rs
src-tauri/tests/: backend_tests.rs  db_tests.rs  export_tests.rs  scanner_tests.rs
